@@ -1,12 +1,15 @@
-//!BOXER:VERSION:0:1:1
+(**expand:boxer-boot*)
+(**boxer-version:0,2,0*)
 include "g"
 GUI = Void
-Window@GUI[]
 
-
-
-
-//!BOXER:REFPOINTS:BEGIN
+(**boxer-refpoints:
+bbox1 1 -23.0957515662 79.6991129258 bbox2 1 71.3423454797 -1.88531784342 p1 1
+-20.2154615182 30.6496131137 p2 1 -2.9523785489 65.0652930926 p3 1 35.303325298
+77.1040972766 p4 1 69.2944192672 43.4906900368 p5 1 25.8613547511 9.49960406392
+v1 1 52.0608243954 2.61783485327
+*)
+(**end:expand*)(**expand:define-all*)
 bbox1 = Point[.x=-23.0957515662, .y=79.6991129258]
 bbox2 = Point[.x=71.3423454797, .y=-1.88531784342]
 p1 = Point[.x=-20.2154615182, .y=30.6496131137]
@@ -15,7 +18,9 @@ p3 = Point[.x=35.303325298, .y=77.1040972766]
 p4 = Point[.x=69.2944192672, .y=43.4906900368]
 p5 = Point[.x=25.8613547511, .y=9.49960406392]
 v1 = Point[.x=52.0608243954, .y=2.61783485327]
-//!BOXER:REFPOINTS:END
+
+(**end:expand*)
+
 // Here we define our Fractal object
 Fractal = ++(Points points, Int level, n, Color c, Real d)
 (.[)@Fractal[.n = .level = 500, .d = 0.5]
@@ -37,7 +42,7 @@ Fractal@Window[
 // And here we use it!
 include "tools"
 
-w = Window[][
+w = Figure[
   BBox[bbox1, bbox2]
 
   (bar_n = GUIReal[Interval[10, 300], v1])
@@ -46,4 +51,4 @@ w = Window[][
   Fractal[p1, p2, p3, p4, p5, color.red, 5.0/n, n]
 ]
 
-GUI[w]
+(**expand:view:w*)(**end:expand*)
