@@ -1,22 +1,26 @@
-//!BOXER:VERSION:0:1:1
+(**expand:boxer-boot*)
+(**boxer-version:0,2,0*)
 include "g"
 GUI = Void
-Window@GUI[]
 
-
-
-//!BOXER:REFPOINTS:BEGIN
-gui1 = Point[.x=32.7743366593, .y=2.27319866085]
+(**boxer-refpoints:
+gui1 1 34.569642781748975 2.5724167210506725 bbox1 1 -33.3736933815
+87.8159051329 bbox2 1 76.1030045728 -1.65034200668
+*)
+(**end:expand*)(**expand:define-all*)
+gui1 = Point[.x=34.5696427817, .y=2.57241672105]
 bbox1 = Point[.x=-33.3736933815, .y=87.8159051329]
 bbox2 = Point[.x=76.1030045728, .y=-1.65034200668]
-//!BOXER:REFPOINTS:END
+
+(**end:expand*)
+
 include "tools"
 
 // We define a new object, which contains all the details about
 // the Pythagorean tree
 PythagTree = (Int level, Point p1, p2, Real xmid, h)
 
-PythagTree@Window[
+PythagTree@Figure[
   xmid = $.xmid, h = $.h, level = $.level, p1 = $.p1, p2 = $.p2, d = 1e-10
   Color[g = 1.0/(level+1), b = 1 - g, (0.5*b, g, 0)]
 
@@ -33,7 +37,7 @@ PythagTree@Window[
                .p1 = t.Get[1], .p2 = t.Get[2]]
 ]
 
-w = Window[][
+w = Figure[
   BBox[bbox1, bbox2]
 
   // Now we can draw the tree with the following line
@@ -47,5 +51,4 @@ w = Window[][
   gui_r // plot the bar
 ]
 
-GUI[w]
-
+(**expand:view:w*)(**end:expand*)
