@@ -1,0 +1,56 @@
+(**expand:boxer-boot*)
+(**boxer-version:0,2,0*)
+include "g"
+GUI = Void
+
+(**boxer-refpoints:
+bbox1 1 0.0 50.0 bbox2 1 100.0 0.0 p1 1 13.265306122448978 15.561211939799328
+p2 1 23.80952380952381 38.69044538461538 p3 1 38.775510204081634
+18.282298227424747 p4 1 41.15646258503401 7.227885183946494 p5 1 75.0
+39.20064906354515 p6 1 88.77551020408163 16.581619297658865 p7 1
+66.156462585034 19.30270558528428
+*)
+(**end:expand*)// TUTORIAL EXAMPLE N.2: Drawing a polygon
+
+(**expand:define-all*)
+bbox1 = Point[.x=0.0, .y=50.0], bbox2 = Point[.x=100.0, .y=0.0]
+p1 = Point[.x=13.2653061224, .y=15.5612119398]
+p2 = Point[.x=23.8095238095, .y=38.6904453846]
+p3 = Point[.x=38.7755102041, .y=18.2822982274]
+p4 = Point[.x=41.156462585, .y=7.22788518395]
+p5 = Point[.x=75.0, .y=39.2006490635]
+p6 = Point[.x=88.7755102041, .y=16.5816192977]
+p7 = Point[.x=66.156462585, .y=19.3027055853]
+
+(**end:expand*)
+
+fg = Figure[
+  BBox[bbox1, bbox2]
+
+  // The line below defines a Poly object, representing a polygon.
+  // The new object is passed directly to the ``opened'' Figure
+  // for the default action, which is just drawing it.
+  // p1, p2, p3 are three ``reference'' points which are shown
+  // in the GUI as small white squares. They can be selected
+  // (they become yellow) with a left mouse click (keep the SHIFT
+  // key pressed to select multiple points). Once a point is yellow
+  // it can be moved with a drag-and-drop action. 
+  Poly[p1, p2, p3]
+
+  // The line below creates a new 'Poly' object and - rather
+  // than passing it to the Figure - assigns it to a new variable.
+  another_polygon = Poly[p4, p5, p6]
+
+  // Variables like 'another_polygon', live within their containing
+  // square brackets [...]. The new variable can now be used. It is
+  // below passed to a new Figure object, which is itself assigned
+  // to a new variable.
+  new_figure = Figure[another_polygon]
+
+  // We finally put the new figure inside the first, scaling it down
+  // a bit. Try to change the AngleDeg[0] to AngleDeg[20], then
+  // press CTRL+RETURN (or try menu Run --> Execute)
+  Put[new_figure, Scale[0.8], AngleDeg[0], Center[p7]]
+]
+
+(**expand:view:fg*)(**end:expand*)
