@@ -1,0 +1,104 @@
+(**expand:boxer-boot*)
+(**boxer-version:0,2,0*)
+include "g"
+GUI = Void
+
+(**boxer-refpoints:
+bbox1 1 0.0 47.44897091722595 bbox2 1 91.30375396825397 -1.7810984340044698 p3
+1 38.265306122448976 38.69044538461537 p4 1 55.44217687074829
+36.649630668896314 p1 1 10.20408163265306 38.69044538461539 p2 1
+26.19047619047619 39.20064906354515 p5 1 65.47619047619047 33.75847648829431 p6
+1 70.06802721088435 44.64282163879598 p7 1 83.84353741496598 43.96255006688963
+p8 1 82.65306122448979 36.47956277591973 p9 1 76.36054421768708
+29.846914949832772 p10 1 2.2108843537414966 26.78569287625418 p11 1
+15.816326530612244 28.486371806020067 p12 1 22.108843537414966
+18.792501906354516 p13 1 6.462585034013606 10.289107257525082 q1 1
+32.82312925170068 29.676847056856186 q2 1 26.020408163265305 14.370736688963213
+q3 1 43.197278911564624 16.241483511705688 q4 1 54.93197278911564
+14.880940367892975 q5 1 45.91836734693877 23.724470802675583 q6 1
+57.993197278911566 24.06460658862876 q7 1 48.80952380952381 16.24148351170568
+q8 1 61.904761904761905 12.329921973244147 q9 1 66.156462585034
+25.59521762541806 q10 1 72.27891156462584 16.24148351170568 q11 1
+78.06122448979592 24.06460658862876 q12 1 77.89115646258503 12.499989866220737
+q13 1 88.35034013605443 18.707492542554228 q14 1 12.886703061224495
+4.804866555183942 q15 1 33.961772448979595 5.298814046822741 q16 1
+51.57921326530612 4.640217391304347 q17 1 64.09253571428572 0.6886374581939805
+*)
+(**end:expand*)// TUTORIAL EXAMPLE N.3: Usage examples for Circle, Poly, Line, Text
+
+(**expand:define-all*)
+bbox1 = Point[.x=0.0, .y=47.4489709172]
+bbox2 = Point[.x=91.3037539683, .y=-1.781098434]
+p3 = Point[.x=38.2653061224, .y=38.6904453846]
+p4 = Point[.x=55.4421768707, .y=36.6496306689]
+p1 = Point[.x=10.2040816327, .y=38.6904453846]
+p2 = Point[.x=26.1904761905, .y=39.2006490635]
+p5 = Point[.x=65.4761904762, .y=33.7584764883]
+p6 = Point[.x=70.0680272109, .y=44.6428216388]
+p7 = Point[.x=83.843537415, .y=43.9625500669]
+p8 = Point[.x=82.6530612245, .y=36.4795627759]
+p9 = Point[.x=76.3605442177, .y=29.8469149498]
+p10 = Point[.x=2.21088435374, .y=26.7856928763]
+p11 = Point[.x=15.8163265306, .y=28.486371806]
+p12 = Point[.x=22.1088435374, .y=18.7925019064]
+p13 = Point[.x=6.46258503401, .y=10.2891072575]
+q1 = Point[.x=32.8231292517, .y=29.6768470569]
+q2 = Point[.x=26.0204081633, .y=14.370736689]
+q3 = Point[.x=43.1972789116, .y=16.2414835117]
+q4 = Point[.x=54.9319727891, .y=14.8809403679]
+q5 = Point[.x=45.9183673469, .y=23.7244708027]
+q6 = Point[.x=57.9931972789, .y=24.0646065886]
+q7 = Point[.x=48.8095238095, .y=16.2414835117]
+q8 = Point[.x=61.9047619048, .y=12.3299219732]
+q9 = Point[.x=66.156462585, .y=25.5952176254]
+q10 = Point[.x=72.2789115646, .y=16.2414835117]
+q11 = Point[.x=78.0612244898, .y=24.0646065886]
+q12 = Point[.x=77.8911564626, .y=12.4999898662]
+q13 = Point[.x=88.3503401361, .y=18.7074925426]
+q14 = Point[.x=12.8867030612, .y=4.80486655518]
+q15 = Point[.x=33.961772449, .y=5.29881404682]
+q16 = Point[.x=51.5792132653, .y=4.6402173913]
+q17 = Point[.x=64.0925357143, .y=0.688637458194]
+
+(**end:expand*)
+
+fg = Figure[
+  BBox[bbox1, bbox2]
+
+  (* Some examples of usage of Circle, Circles, Poly, Line, and
+     Text are provided here. These five objects allow tracing quite
+     a number of shapes. To get further help on a specific object
+     try the help browser: menu Help -> Documentation Browser 
+     or just type CTRL+H *)
+
+  Circle[p1, 8]                 // Circle
+  Circle[p2, 4, 8]              // Ellipse
+  Circles[p3, 3; 4; 5; 6]       // Rings
+  Circles[p4, 3, 6; p4, 6, 3]   // Crossing ellipses
+
+  Poly[p5, p6, p7, p8, p9]      // Polygon
+  Poly[p10, p11, 0.5, p12, p13] // Partially rounded polygon
+  Poly[0.5, p10, p11, p12, p13
+       color.red]               // Partially rounded polygon (red)
+  Poly[q1, q2, q3]                   // Polygon
+  Poly[0.3, q1, q2, q3, Color[0.5]]  // Same, rounding 0.3
+  Poly[0.5, q1, q2, q3, Color[0.8]]  // Same, rounding 0.5
+
+  // Dashed stroke style
+  ss1 = StrokeStyle[1, Dash[3, 1]]
+
+  // Stroke style for lines: using round caps and round joints
+  ss2 = StrokeStyle[Cap["round"], Join["round"]]
+
+  Line[0.5, q4, q5, q6, q7]          // Simple line with width 0.5
+  Line[ss1, q8, q9, q10]             // Dashed line
+  Line[5, q11, q12, q13, ss2]        // Thick line with round cap
+
+  Text["Hello\nworld!", q14]
+  Text[Font["times", 8], "BOX^{ER}", q15]
+  Text[Font["times", 8], "_xx^x", q16]
+  Text[Font["times", 6], "ONE\nTWO", q17
+       From[(0, 0)]]
+]
+
+(**expand:view:fg*)(**end:expand*)
